codegen-sdk-cst-generator/src/generator/snapshots/codegen_sdk_cst_generator__generator__node__tests__get_enum_tokens-2.snap
---
source: codegen-sdk-cst-generator/src/generator/node.rs
expression: snapshot_tokens(&tokens)
---
# [subenum (Subenum)] Test (Test)
